@@ -1,356 +1,295 @@
 package com.daveestar.bettervanilla.gui;
 
 import java.util.Arrays;
-import java.util.ArrayList;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.bukkit.Material;
-import org.bukkit.Sound;
+import org.bukkit.block.Biome;
 import org.bukkit.entity.Player;
-import org.bukkit.event.EventHandler;
-import org.bukkit.event.Listener;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
 import com.daveestar.bettervanilla.Main;
-import com.daveestar.bettervanilla.manager.MaintenanceManager;
+import com.daveestar.bettervanilla.manager.CompassManager;
+import com.daveestar.bettervanilla.manager.NavigationManager;
 import com.daveestar.bettervanilla.manager.SettingsManager;
+import com.daveestar.bettervanilla.utils.ActionBar;
 import com.daveestar.bettervanilla.utils.CustomGUI;
 
-import io.papermc.paper.event.player.AsyncChatEvent;
 import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.TextComponent;
 import net.md_5.bungee.api.ChatColor;
 
-public class SettingsGUI implements Listener {
+public class SettingsGUI {
   private final Main _plugin;
   private final SettingsManager _settingsManager;
-  private final MaintenanceManager _maintenanceManager;
-  private final Map<UUID, Boolean> _afkTimePending;
-  private final Map<UUID, Boolean> _maintenanceMessagePending;
+  private final NavigationManager _navigationManager;
+  private final CompassManager _compassManager;
+  private final ActionBar _actionBar;
+  private final AdminSettingsGUI _adminSettingsGUI;
 
   public SettingsGUI() {
     _plugin = Main.getInstance();
     _settingsManager = _plugin.getSettingsManager();
-    _maintenanceManager = _plugin.getMaintenanceManager();
-    _afkTimePending = new HashMap<>();
-    _maintenanceMessagePending = new HashMap<>();
-    _plugin.getServer().getPluginManager().registerEvents(this, _plugin);
+    _navigationManager = _plugin.getNavigationManager();
+    _compassManager = _plugin.getCompassManager();
+    _actionBar = _plugin.getActionBar();
+    _adminSettingsGUI = new AdminSettingsGUI();
   }
 
   public void displayGUI(Player p) {
+    boolean isAdmin = p.hasPermission("bettervanilla.adminsettings");
+    // two entry rows for admins, one for normal players (plus navigation row)
+    int rows = isAdmin ? 3 : 2;
+
     Map<String, ItemStack> entries = new HashMap<>();
-    entries.put("maintenance", _createMaintenanceItem());
-    entries.put("creeperdamage", _createCreeperDamageItem());
-    entries.put("enableend", _createEnableEndItem());
-    entries.put("enablenether", _createEnableNetherItem());
-    entries.put("sleepingrain", _createSleepingRainItem());
-    entries.put("afkprotection", _createAFKProtectionItem());
-    entries.put("afktime", _createAFKTimeItem());
+    entries.put("togglelocation", _createToggleLocationItem(p));
+    entries.put("togglecompass", _createToggleCompassItem(p));
+    entries.put("navigationtrail", _createNavigationTrailItem(p));
+    entries.put("chestsort", _createChestSortItem(p));
+
+    if (isAdmin) {
+      entries.put("adminsettings", _createAdminSettingsItem());
+    }
 
     Map<String, Integer> customSlots = new HashMap<>();
-    // first row
-    customSlots.put("maintenance", 0);
-    customSlots.put("creeperdamage", 2);
-    customSlots.put("enableend", 4);
-    customSlots.put("enablenether", 6);
-    customSlots.put("sleepingrain", 8);
+    customSlots.put("togglelocation", 1);
+    customSlots.put("togglecompass", 3);
+    customSlots.put("navigationtrail", 5);
+    customSlots.put("chestsort", 7);
 
-    // second row
-    customSlots.put("afkprotection", 12);
-    customSlots.put("afktime", 14);
+    if (isAdmin) {
+      customSlots.put("adminsettings", rows * 9 - 10);
+    }
 
     CustomGUI gui = new CustomGUI(_plugin, p,
         ChatColor.YELLOW + "" + ChatColor.BOLD + "» Settings",
-        entries, 3, customSlots, null,
+        entries, rows, customSlots, null,
         EnumSet.of(CustomGUI.Option.DISABLE_PAGE_BUTTON));
 
-    Map<String, CustomGUI.ClickAction> actions = new HashMap<>();
-    actions.put("maintenance", new CustomGUI.ClickAction() {
+    Map<String, CustomGUI.ClickAction> clickActions = new HashMap<>();
+    clickActions.put("togglelocation", new CustomGUI.ClickAction() {
       @Override
-      public void onLeftClick(Player player) {
-        _toggleMaintenance(player, null);
-        displayGUI(player);
-      }
-
-      @Override
-      public void onRightClick(Player player) {
-        if (!_maintenanceManager.getState()) {
-          player.sendMessage(Main.getPrefix() + "Enter maintenance message:");
-          _maintenanceMessagePending.put(player.getUniqueId(), true);
-          player.closeInventory();
-        } else {
-          _toggleMaintenance(player, null);
-          displayGUI(player);
+      public void onLeftClick(Player p) {
+        if (!p.hasPermission("bettervanilla.togglelocation")) {
+          p.sendMessage(
+              Main.getPrefix() + ChatColor.RED + "You do not have permission to toggle the Action-Bar location.");
+          p.playSound(p, org.bukkit.Sound.ENTITY_VILLAGER_NO, 0.5F, 1);
+          return;
         }
+
+        _toggleLocation(p);
+        displayGUI(p);
       }
     });
 
-    actions.put("creeperdamage", new CustomGUI.ClickAction() {
+    clickActions.put("togglecompass", new CustomGUI.ClickAction() {
       @Override
-      public void onLeftClick(Player player) {
-        _toggleCreeperDamage(player);
-        displayGUI(player);
+      public void onLeftClick(Player p) {
+        if (!p.hasPermission("bettervanilla.togglecompass")) {
+          p.sendMessage(Main.getPrefix() + ChatColor.RED
+              + "You do not have permission to toggle the Bossbar-Compass.");
+          p.playSound(p, org.bukkit.Sound.ENTITY_VILLAGER_NO, 0.5F, 1);
+          return;
+        }
+
+        _toggleCompass(p);
+        displayGUI(p);
       }
     });
 
-    actions.put("enableend", new CustomGUI.ClickAction() {
+    clickActions.put("chestsort", new CustomGUI.ClickAction() {
       @Override
-      public void onLeftClick(Player player) {
-        _toggleEnd(player);
-        displayGUI(player);
+      public void onLeftClick(Player p) {
+
+        if (!p.hasPermission("bettervanilla.chestsort")) {
+          p.sendMessage(
+              Main.getPrefix() + ChatColor.RED + "You do not have permission to toggle chest sorting.");
+          p.playSound(p, org.bukkit.Sound.ENTITY_VILLAGER_NO, 0.5F, 1);
+          return;
+        }
+
+        _toggleChestSort(p);
+        displayGUI(p);
       }
     });
-
-    actions.put("enablenether", new CustomGUI.ClickAction() {
+    clickActions.put("navigationtrail", new CustomGUI.ClickAction() {
       @Override
-      public void onLeftClick(Player player) {
-        _toggleNether(player);
-        displayGUI(player);
+      public void onLeftClick(Player p) {
+        _toggleNavigationTrail(p);
+        displayGUI(p);
       }
     });
 
-    actions.put("sleepingrain", new CustomGUI.ClickAction() {
-      @Override
-      public void onLeftClick(Player player) {
-        _toggleSleepingRain(player);
-        displayGUI(player);
-      }
-    });
+    if (isAdmin) {
+      clickActions.put("adminsettings", new CustomGUI.ClickAction() {
+        @Override
+        public void onLeftClick(Player p) {
+          _adminSettingsGUI.displayGUI(p, gui);
+        }
+      });
+    }
 
-    actions.put("afkprotection", new CustomGUI.ClickAction() {
-      @Override
-      public void onLeftClick(Player player) {
-        _toggleAFKProtection(player);
-        displayGUI(player);
-      }
-    });
-
-    actions.put("afktime", new CustomGUI.ClickAction() {
-      @Override
-      public void onLeftClick(Player player) {
-        player.sendMessage(Main.getPrefix() + "Enter AFK time in minutes:");
-        _afkTimePending.put(player.getUniqueId(), true);
-        player.closeInventory();
-      }
-    });
-
-    gui.setClickActions(actions);
+    gui.setClickActions(clickActions);
     gui.open(p);
   }
 
-  private ItemStack _createMaintenanceItem() {
-    boolean state = _maintenanceManager.getState();
-    String message = _settingsManager.getMaintenanceMessage();
-    ItemStack item = new ItemStack(Material.IRON_BARS);
+  private ItemStack _createToggleLocationItem(Player p) {
+    boolean state = _settingsManager.getToggleLocation(p);
+    ItemStack item = new ItemStack(Material.FILLED_MAP);
     ItemMeta meta = item.getItemMeta();
-    if (meta != null) {
-      meta.displayName(Component.text(ChatColor.RED + "" + ChatColor.BOLD + "» " + ChatColor.YELLOW + "Maintenance"));
 
-      var lore = new ArrayList<String>();
-      lore.add("");
-      lore.add(ChatColor.YELLOW + "» " + ChatColor.GRAY + "State: "
-          + (state ? ChatColor.GREEN + "ENABLED" : ChatColor.RED + "DISABLED"));
-      if (message != null && !message.isEmpty()) {
-        lore.add(ChatColor.YELLOW + "» " + ChatColor.GRAY + "Message: " + ChatColor.YELLOW + message);
-      }
-      lore.add(ChatColor.YELLOW + "» " + ChatColor.GRAY + "Left-Click: Toggle");
-      lore.add(ChatColor.YELLOW + "» " + ChatColor.GRAY + "Right-Click: Toggle with message");
-
-      meta.lore(lore.stream().map(Component::text).collect(Collectors.toList()));
-      item.setItemMeta(meta);
-    }
-    return item;
-  }
-
-  private ItemStack _createCreeperDamageItem() {
-    boolean state = _settingsManager.getToggleCreeperDamage();
-    ItemStack item = new ItemStack(Material.CREEPER_HEAD);
-    ItemMeta meta = item.getItemMeta();
     if (meta != null) {
       meta.displayName(
-          Component.text(ChatColor.RED + "" + ChatColor.BOLD + "» " + ChatColor.YELLOW + "Creeper Damage"));
+          Component.text(ChatColor.RED + "" + ChatColor.BOLD + "» " + ChatColor.YELLOW + "Action-Bar Location"));
       meta.lore(Arrays.asList(
+          ChatColor.YELLOW + "» " + ChatColor.GRAY + "Show your current location in the actionbar.",
           "",
           ChatColor.YELLOW + "» " + ChatColor.GRAY + "State: "
               + (state ? ChatColor.GREEN + "ENABLED" : ChatColor.RED + "DISABLED"),
           ChatColor.YELLOW + "» " + ChatColor.GRAY + "Left-Click: Toggle")
-          .stream().map(Component::text).collect(Collectors.toList()));
+          .stream().map(Component::text).toList());
       item.setItemMeta(meta);
     }
+
     return item;
   }
 
-  private ItemStack _createEnableEndItem() {
-    boolean state = _settingsManager.getEnableEnd();
-    ItemStack item = new ItemStack(Material.ENDER_EYE);
+  private ItemStack _createToggleCompassItem(Player p) {
+    boolean state = _compassManager.checkPlayerActiveCompass(p);
+    ItemStack item = new ItemStack(Material.COMPASS);
     ItemMeta meta = item.getItemMeta();
-    if (meta != null) {
-      meta.displayName(Component.text(ChatColor.RED + "" + ChatColor.BOLD + "» " + ChatColor.YELLOW + "Enable End"));
-      meta.lore(Arrays.asList(
-          "",
-          ChatColor.YELLOW + "» " + ChatColor.GRAY + "State: "
-              + (state ? ChatColor.GREEN + "ENABLED" : ChatColor.RED + "DISABLED"),
-          ChatColor.YELLOW + "» " + ChatColor.GRAY + "Left-Click: Toggle")
-          .stream().map(Component::text).collect(Collectors.toList()));
-      item.setItemMeta(meta);
-    }
-    return item;
-  }
 
-  private ItemStack _createEnableNetherItem() {
-    boolean state = _settingsManager.getEnableNether();
-    ItemStack item = new ItemStack(Material.BLAZE_ROD);
-    ItemMeta meta = item.getItemMeta();
-    if (meta != null) {
-      meta.displayName(Component.text(ChatColor.RED + "" + ChatColor.BOLD + "» " + ChatColor.YELLOW + "Enable Nether"));
-      meta.lore(Arrays.asList(
-          "",
-          ChatColor.YELLOW + "» " + ChatColor.GRAY + "State: "
-              + (state ? ChatColor.GREEN + "ENABLED" : ChatColor.RED + "DISABLED"),
-          ChatColor.YELLOW + "» " + ChatColor.GRAY + "Left-Click: Toggle")
-          .stream().map(Component::text).collect(Collectors.toList()));
-      item.setItemMeta(meta);
-    }
-    return item;
-  }
-
-  private ItemStack _createSleepingRainItem() {
-    boolean state = _settingsManager.getSleepingRain();
-    ItemStack item = new ItemStack(Material.BLUE_BED);
-    ItemMeta meta = item.getItemMeta();
-    if (meta != null) {
-      meta.displayName(Component.text(ChatColor.RED + "" + ChatColor.BOLD + "» " + ChatColor.YELLOW + "Sleeping Rain"));
-      meta.lore(Arrays.asList(
-          "",
-          ChatColor.YELLOW + "» " + ChatColor.GRAY + "State: "
-              + (state ? ChatColor.GREEN + "ENABLED" : ChatColor.RED + "DISABLED"),
-          ChatColor.YELLOW + "» " + ChatColor.GRAY + "Left-Click: Toggle")
-          .stream().map(Component::text).collect(Collectors.toList()));
-      item.setItemMeta(meta);
-    }
-    return item;
-  }
-
-  private ItemStack _createAFKProtectionItem() {
-    boolean state = _settingsManager.getAFKProtection();
-    ItemStack item = new ItemStack(Material.TOTEM_OF_UNDYING);
-    ItemMeta meta = item.getItemMeta();
     if (meta != null) {
       meta.displayName(
-          Component.text(ChatColor.RED + "" + ChatColor.BOLD + "» " + ChatColor.YELLOW + "AFK Protection"));
+          Component.text(ChatColor.RED + "" + ChatColor.BOLD + "» " + ChatColor.YELLOW + "Bossbar Compass"));
       meta.lore(Arrays.asList(
+          ChatColor.YELLOW + "» " + ChatColor.GRAY + "Shows a compass in the bossbar",
           "",
           ChatColor.YELLOW + "» " + ChatColor.GRAY + "State: "
               + (state ? ChatColor.GREEN + "ENABLED" : ChatColor.RED + "DISABLED"),
           ChatColor.YELLOW + "» " + ChatColor.GRAY + "Left-Click: Toggle")
-          .stream().map(Component::text).collect(Collectors.toList()));
+          .stream().map(Component::text).toList());
       item.setItemMeta(meta);
     }
+
     return item;
   }
 
-  private ItemStack _createAFKTimeItem() {
-    int minutes = _settingsManager.getAFKTime();
-    ItemStack item = new ItemStack(Material.CLOCK);
+  private ItemStack _createChestSortItem(Player p) {
+    boolean state = _settingsManager.getChestSort(p);
+    ItemStack item = new ItemStack(Material.CHEST);
     ItemMeta meta = item.getItemMeta();
-    if (meta != null) {
-      meta.displayName(Component.text(ChatColor.RED + "" + ChatColor.BOLD + "» " + ChatColor.YELLOW + "AFK Time"));
-      meta.lore(Arrays.asList(
-          "",
-          ChatColor.YELLOW + "» " + ChatColor.GRAY + "Current: " + ChatColor.YELLOW + minutes + ChatColor.GRAY
-              + " minutes",
-          ChatColor.YELLOW + "» " + ChatColor.GRAY + "Left-Click: Set value")
-          .stream().map(Component::text).collect(Collectors.toList()));
-      item.setItemMeta(meta);
-    }
+
+    meta.displayName(
+        Component.text(ChatColor.RED + "" + ChatColor.BOLD + "» " + ChatColor.YELLOW + "Chest Sorting"));
+    meta.lore(Arrays.asList(
+        ChatColor.YELLOW + "» " + ChatColor.GRAY + "Right-Click outside of a chest inventory to sort it!",
+        "",
+        ChatColor.YELLOW + "» " + ChatColor.GRAY + "State: "
+            + (state ? ChatColor.GREEN + "ENABLED" : ChatColor.RED + "DISABLED"),
+        ChatColor.YELLOW + "» " + ChatColor.GRAY + "Left-Click: Toggle")
+        .stream().map(Component::text).toList());
+    item.setItemMeta(meta);
+
     return item;
   }
 
-  @EventHandler
-  public void onPlayerChat(AsyncChatEvent e) {
-    Player p = e.getPlayer();
-    UUID id = p.getUniqueId();
-    if (_afkTimePending.containsKey(id)) {
-      e.setCancelled(true);
-      String content = ((TextComponent) e.message()).content();
-      try {
-        int minutes = Integer.parseInt(content);
-        _plugin.getServer().getScheduler().runTask(_plugin, () -> {
-          _settingsManager.setAFKTime(minutes);
-          p.sendMessage(
-              Main.getPrefix() + "AFK time set to: " + ChatColor.YELLOW + minutes + ChatColor.GRAY + " minutes");
-          p.playSound(p, Sound.ENTITY_PLAYER_LEVELUP, 0.5F, 1);
-          _afkTimePending.remove(id);
-          displayGUI(p);
-        });
-      } catch (NumberFormatException ex) {
-        p.sendMessage(Main.getPrefix() + ChatColor.RED + "Please provide a valid number.");
-      }
-      return;
+  private ItemStack _createNavigationTrailItem(Player p) {
+    boolean state = _settingsManager.getNavigationTrail(p);
+    ItemStack item = new ItemStack(Material.BLAZE_POWDER);
+    ItemMeta meta = item.getItemMeta();
+
+    if (meta != null) {
+      meta.displayName(
+          Component.text(ChatColor.RED + "" + ChatColor.BOLD + "» " + ChatColor.YELLOW + "Navigation Particles"));
+      meta.lore(Arrays.asList(
+          ChatColor.YELLOW + "» " + ChatColor.GRAY + "Show particle trails when navigating to a location.",
+          "",
+          ChatColor.YELLOW + "» " + ChatColor.GRAY + "State: "
+              + (state ? ChatColor.GREEN + "ENABLED" : ChatColor.RED + "DISABLED"),
+          ChatColor.YELLOW + "» " + ChatColor.GRAY + "Left-Click: Toggle")
+          .stream().map(Component::text).toList());
+      item.setItemMeta(meta);
     }
 
-    if (_maintenanceMessagePending.containsKey(id)) {
-      e.setCancelled(true);
-      String message = ((TextComponent) e.message()).content();
-      _plugin.getServer().getScheduler().runTask(_plugin, () -> {
-        _maintenanceMessagePending.remove(id);
-        _toggleMaintenance(p, message);
-        p.playSound(p, Sound.ENTITY_PLAYER_LEVELUP, 0.5F, 1);
-        displayGUI(p);
-      });
+    return item;
+  }
+
+  private ItemStack _createAdminSettingsItem() {
+    ItemStack item = new ItemStack(Material.REDSTONE_TORCH);
+    ItemMeta meta = item.getItemMeta();
+
+    if (meta != null) {
+      meta.displayName(
+          Component.text(ChatColor.RED + "" + ChatColor.BOLD + "» " + ChatColor.YELLOW + "Admin Settings"));
+      meta.lore(Arrays.asList(
+          ChatColor.YELLOW + "» " + ChatColor.GRAY + "Open the admin settings menu.",
+          "",
+          ChatColor.YELLOW + "» " + ChatColor.GRAY + "Open admin settings")
+          .stream().map(Component::text).toList());
+      item.setItemMeta(meta);
     }
+
+    return item;
   }
 
-  private void _toggleMaintenance(Player p, String message) {
-    boolean newState = !_maintenanceManager.getState();
-    _maintenanceManager.setState(newState, newState ? message : null);
-    String stateText = newState ? "ENABLED" : "DISABLED";
-    p.sendMessage(
-        Main.getPrefix() + "The maintenance mode is now turned: " + ChatColor.YELLOW + ChatColor.BOLD + stateText);
-    if (newState && message != null) {
-      p.sendMessage(Main.getPrefix() + "Message was set to: " + ChatColor.YELLOW + message);
+  private void _toggleLocation(Player p) {
+    boolean newState;
+
+    if (_settingsManager.getToggleLocation(p)) {
+      _settingsManager.setToggleLocation(p, false);
+      _actionBar.removeActionBar(p);
+      newState = false;
+    } else {
+      _navigationManager.stopNavigation(p);
+      _settingsManager.setToggleLocation(p, true);
+
+      var blockLoc = p.getLocation().toBlockLocation();
+      Biome biome = p.getWorld().getBiome(blockLoc);
+      String locationText = ChatColor.YELLOW + "X: " + ChatColor.GRAY + blockLoc.getBlockX()
+          + ChatColor.YELLOW + " Y: " + ChatColor.GRAY + blockLoc.getBlockY()
+          + ChatColor.YELLOW + " Z: " + ChatColor.GRAY + blockLoc.getBlockZ() + ChatColor.RED
+          + ChatColor.BOLD + " » " + ChatColor.GRAY + biome.getKey();
+
+      _actionBar.sendActionBar(p, locationText);
+      newState = true;
     }
-    _maintenanceManager.kickAll(_plugin.getServer().getOnlinePlayers());
+
+    String stateText = newState ? "ENABLED" : "DISABLED";
+    p.sendMessage(Main.getPrefix() + "Action-Bar location is now " + ChatColor.YELLOW + ChatColor.BOLD + stateText);
   }
 
-  private void _toggleCreeperDamage(Player p) {
-    boolean newState = !_settingsManager.getToggleCreeperDamage();
-    _settingsManager.setToggleCreeperDamage(newState);
+  private void _toggleCompass(Player p) {
+    boolean currentlyActive = _compassManager.checkPlayerActiveCompass(p);
+    boolean newState = !currentlyActive;
+
+    if (currentlyActive) {
+      _compassManager.removePlayerFromCompass(p);
+    } else {
+      _compassManager.addPlayerToCompass(p);
+    }
+
+    _settingsManager.setToggleCompass(p, newState);
+
     String stateText = newState ? "ENABLED" : "DISABLED";
-    p.sendMessage(Main.getPrefix() + "Creeper damage is now turned: " + ChatColor.YELLOW + ChatColor.BOLD + stateText);
+    p.sendMessage(Main.getPrefix() + "Bossbar-Compass is now " + ChatColor.YELLOW + ChatColor.BOLD + stateText);
   }
 
-  private void _toggleEnd(Player p) {
-    boolean newState = !_settingsManager.getEnableEnd();
-    _settingsManager.setEnableEnd(newState);
+  private void _toggleChestSort(Player p) {
+    boolean newState = !_settingsManager.getChestSort(p);
+    _settingsManager.setChestSort(p, newState);
+
     String stateText = newState ? "ENABLED" : "DISABLED";
-    p.sendMessage(Main.getPrefix() + "The End is now " + ChatColor.YELLOW + ChatColor.BOLD + stateText);
+    p.sendMessage(Main.getPrefix() + "Chest sorting is now " + ChatColor.YELLOW + ChatColor.BOLD + stateText);
   }
 
-  private void _toggleNether(Player p) {
-    boolean newState = !_settingsManager.getEnableNether();
-    _settingsManager.setEnableNether(newState);
-    String stateText = newState ? "ENABLED" : "DISABLED";
-    p.sendMessage(Main.getPrefix() + "The Nether is now " + ChatColor.YELLOW + ChatColor.BOLD + stateText);
-  }
+  private void _toggleNavigationTrail(Player p) {
+    boolean newState = !_settingsManager.getNavigationTrail(p);
+    _settingsManager.setNavigationTrail(p, newState);
 
-  private void _toggleSleepingRain(Player p) {
-    boolean newState = !_settingsManager.getSleepingRain();
-    _settingsManager.setSleepingRain(newState);
     String stateText = newState ? "ENABLED" : "DISABLED";
-    p.sendMessage(Main.getPrefix() + "Sleeping Rain is now turned: " + ChatColor.YELLOW + ChatColor.BOLD + stateText);
-  }
-
-  private void _toggleAFKProtection(Player p) {
-    boolean newState = !_settingsManager.getAFKProtection();
-    _settingsManager.setAFKProtection(newState);
-    _plugin.getAFKManager().applyProtectionToAFKPlayers(newState);
-    String stateText = newState ? "ENABLED" : "DISABLED";
-    p.sendMessage(Main.getPrefix() + "AFK protection is now " + ChatColor.YELLOW + ChatColor.BOLD + stateText);
+    p.sendMessage(Main.getPrefix() + "Navigation particles are now " + ChatColor.YELLOW + ChatColor.BOLD + stateText);
   }
 }
